# django-s3file

./: .checks.yml  .editorconfig  .fussyfox.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.md  http-message-flow.sequence  linter-requirements.txt  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  standard.yml  tests.yml
s3file/: __init__.py  apps.py  checks.py  conf.py  forms.py  middleware.py  models.py  storages.py  storages_optimized.py  urls.py  views.py
s3file/static/s3file/: jquery.ui.widget.js
s3file/static/s3file/css/: s3file.css  s3file.less
s3file/static/s3file/js/: jquery.fileupload.js  jquery.iframe-transport.js  s3file.coffee  s3file.js  s3file.map
tests/: conftest.py  test_apps.py  test_checks.py  test_forms.py  test_middleware.py  test_storages.py  test_views.py
tests/__tests__/: s3file.test.js
tests/testapp/: dummy_storage.py  forms.py  models.py  settings.py  urls.py  views.py
tests/testapp/templates/: form.html
