[build-system]
requires = ["flit_core>=3.2", "flit_scm", "wheel"]
build-backend = "flit_scm:buildapi"

[project]
name = "django-s3file"
authors = [
    { name = "Johannes Maron", email = "johannes@maron.family" }
]
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version", "description"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: JavaScript",
    "Topic :: Software Development",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
]
requires-python = ">=3.9"
dependencies = [
    "django>=2.0",
    "django-storages>=1.6",
    "boto3",
]

[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
    "pytest-cov",
    "pytest-django",
    "selenium",
]

[project.urls]
Project-URL = "https://github.com/codingjoe/django-s3file"

[tool.flit.module]
name = "s3file"

[tool.setuptools_scm]
write_to = "s3file/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=s3file --tb=short -rxs"
testpaths = [
    "tests",
]
DJANGO_SETTINGS_MODULE = "tests.testapp.settings"

[tool.isort]
atomic = true
line_length = 88
known_first_party = "s3file, tests"
include_trailing_comma = true
default_section = "THIRDPARTY"
combine_as_imports = true

[tool.pydocstyle]
add_ignore = "D1"
