[build-system]
requires = ["flit_core>=3.2", "flit_scm", "wheel"]
build-backend = "flit_scm:buildapi"

[project]
name = "django-s3file"
authors = [
  { name = "Johannes Maron", email = "johannes@maron.family" }
]
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version", "description"]
classifiers = [
  "Development Status :: 6 - Mature",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: JavaScript",
  "Topic :: Software Development",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
]
requires-python = ">=3.11"
dependencies = [
  "django>=4.2",
  "django-storages>=1.6",
  "boto3",
]

[dependency-groups]
dev = [
  { include-group = "test" },
]
test = [
  "pytest >=2.7.3",
  "pytest-cov",
  "pytest-django",
  "selenium",
]

[project.urls]
# https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
Homepage = "https://github.com/codingjoe/django-s3file"
Changelog = "https://github.com/codingjoe/django-s3file/releases"
Source = "https://github.com/codingjoe/django-s3file"
Releasenotes = "https://github.com/codingjoe/django-s3file/releases/latest"
Documentation = "https://github.com/codingjoe/django-s3file?tab=readme-ov-file"
Issues = "https://github.com/codingjoe/django-s3file/issues"
Funding = "https://github.com/sponsors/codingjoe"

[tool.flit.module]
name = "s3file"

[tool.setuptools_scm]
write_to = "s3file/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov --cov-report=xml --cov-report=term --tb=short -rxs"
testpaths = [
  "tests",
]
DJANGO_SETTINGS_MODULE = "tests.testapp.settings"

[tool.coverage.run]
source = ["s3file"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
src = ["s3file", "tests"]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
preview = true

[tool.ruff.lint]
select = [
    "D", # pydocstyle
    "E", # pycodestyle errors
    "EXE", # flake8-executable
    "F", # pyflakes
    "I", # isort
    "PGH", # pygrep-hooks
    "PT", # flake8-pytest-style
    "RET", # flake8-return
    "S", # flake8-bandit
    "SIM", # flake8-simplify
    "UP", # pyupgrade
    "W", # pycodestyle warnings
]

ignore = ["D1", "E501", "PT012"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
force-wrap-aliases = true
known-first-party = ["s3file", "tests"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
