[metadata]
name = django-s3file
author = Johannes Hoppe
author_email = info@johanneshoppe.com
description = A lightweight file uploader input for Django and Amazon S3
long_description = file: README.rst
url = https://github.com/codingjoe/django-s3file
license = MIT
license_file = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find:
install_requires =
    django>=2.0
    django-storages
    boto3
setup_requires =
    setuptools_scm
    pytest-runner
tests_require =
    pytest
    pytest-cov
    pytest-django
    selenium

[options.package_data]
* = *.txt, *.rst, *.html, *.po

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=s3file --cov-report xml --tb=short -rxs
DJANGO_SETTINGS_MODULE=tests.testapp.settings

[tox:tox]
envlist = py{36,37}-dj{20,21,22,master}

[testenv]
deps=
    dj20: https://github.com/django/django/archive/stable/2.0.x.tar.gz#egg=django
    dj21: https://github.com/django/django/archive/stable/2.1.x.tar.gz#egg=django
    dj22: https://github.com/django/django/archive/stable/2.2.x.tar.gz#egg=django
    djmaster: https://github.com/django/django/archive/master.tar.gz#egg=django
commands=
    python setup.py test

[flake8]
max-line-length=88
exclude = venv,.tox,.eggs

[pydocstyle]
add_ignore = D1

[isort]
atomic = true
line_length = 88
known_first_party = s3file, tests
include_trailing_comma = True
default_section=THIRDPARTY
combine_as_imports = true
