[metadata]
name = django-s3file
author = Johannes Hoppe
author_email = info@johanneshoppe.com
description = A lightweight file uploader input for Django and Amazon S3
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/codingjoe/django-s3file
license = MIT
license_file = LICENSE
classifier =
    Development Status :: 6 - Mature
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: JavaScript
    Topic :: Software Development
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.1

[options]
include_package_data = True
packages = find:
install_requires =
    django>=2.0
    django-storages
    boto3
setup_requires =
    setuptools_scm
    pytest-runner
tests_require =
    pytest
    pytest-cov
    pytest-django
    selenium

[options.package_data]
* = *.txt, *.rst, *.html, *.po

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=s3file --cov-report xml --tb=short -rxs
DJANGO_SETTINGS_MODULE=tests.testapp.settings

[flake8]
max-line-length=88
select = C,E,F,W,B,B950
ignore = E203, E501, W503, E731

[pydocstyle]
add_ignore = D1

[isort]
atomic = true
line_length = 88
known_first_party = s3file, tests
include_trailing_comma = True
default_section=THIRDPARTY
combine_as_imports = true
